compiler-core/src/type_/tests/snapshots/rakun_core__type___tests__errors__case15.snap
---
source: compiler-core/src/type_/tests/errors.rs
assertion_line: 510
expression: "case 2.22, 1, \"three\" { x, _, y if x <. y -> 1 }"
---
----- SOURCE CODE
case 2.22, 1, "three" { x, _, y if x <. y -> 1 }

----- ERROR
error: Type mismatch
  ┌─ /src/one/two.rakun:1:41
  │
1 │ case 2.22, 1, "three" { x, _, y if x <. y -> 1 }
  │                                         ^

Expected type:

    Float

Found type:

    String
