compiler-core/src/type_/tests/snapshots/rakun_core__type___tests__errors__case16.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: "case [3], 1.1 { x, y if x <=. y -> 1 }"
---
----- SOURCE CODE
case [3], 1.1 { x, y if x <=. y -> 1 }

----- ERROR
error: Type mismatch
  ┌─ /src/one/two.rakun:1:25
  │
1 │ case [3], 1.1 { x, y if x <=. y -> 1 }
  │                         ^

Expected type:

    Float

Found type:

    List(Int)
