compiler-core/src/type_/tests/snapshots/rakun_core__type___tests__errors__case17.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: "case 2.22, 1, \"three\" { x, _, y if x <=. y -> 1 }"
---
error: Type mismatch
  ┌─ /src/one/two.rakun:1:42
  │
1 │ case 2.22, 1, "three" { x, _, y if x <=. y -> 1 }
  │                                          ^

Expected type:

    Float

Found type:

    String
