compiler-core/src/type_/tests/snapshots/rakun_core__type___tests__errors__case18.snap
---
source: compiler-core/src/type_/tests/errors.rs
assertion_line: 525
expression: "case 1 { x if x == \"x\" -> 1 }"
---
----- SOURCE CODE
case 1 { x if x == "x" -> 1 }

----- ERROR
error: Type mismatch
  ┌─ /src/one/two.rakun:1:15
  │
1 │ case 1 { x if x == "x" -> 1 }
  │               ^^^^^^^^

Expected type:

    Int

Found type:

    String
