compiler-core/src/type_/tests/snapshots/rakun_core__type___tests__errors__case3.snap
---
source: compiler-core/src/type_/tests/errors.rs
assertion_line: 450
expression: "case 1, 2.22, \"three\" { x, _, y if x > y -> 1 }"
---
----- SOURCE CODE
case 1, 2.22, "three" { x, _, y if x > y -> 1 }

----- ERROR
error: Type mismatch
  ┌─ /src/one/two.rakun:1:40
  │
1 │ case 1, 2.22, "three" { x, _, y if x > y -> 1 }
  │                                        ^

Expected type:

    Int

Found type:

    String
