compiler-core/src/type_/tests/snapshots/rakun_core__type___tests__errors__case4.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: "case [3.33], 1 { x, y if x >= y -> 1 }"
---
----- SOURCE CODE
case [3.33], 1 { x, y if x >= y -> 1 }

----- ERROR
error: Type mismatch
  ┌─ /src/one/two.rakun:1:26
  │
1 │ case [3.33], 1 { x, y if x >= y -> 1 }
  │                          ^

Expected type:

    Int

Found type:

    List(Float)
